notifpopups: fix shadow (ish)
Ugh shadow still gets cut off at the bottom of all popups except the last

--- a/scss/notifpopups.scss
+++ b/scss/notifpopups.scss
@@ -18,12 +18,18 @@
 }
 
 .notifpopups {
-    min-width: lib.s(410);
+    min-width: lib.s(425);
     padding-left: lib.s(10); // So notifications can overshoot for init animation
+
+    // For shadow
+    & > :last-child .wrapper {
+        padding-bottom: lib.s(15);
+    }
 
     .notification {
         .wrapper {
             padding-top: lib.s(10);
+            padding-left: lib.s(15); // For shadow
         }
 
         .inner {
